Fixed bug #71077 (ReflectionMethod for ArrayObject constructor returns wrong number of parameters)